sm/sm-b2b-connector/main/default/objects/SBQQ_Subscription__c/SBQQ_Subscription__c.object-meta.xml
<CustomObject>
    <label>SBQQ  Subscription</label>
    <nameField>
        <label>SBQQ__Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SBQQ_Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>