sm/sm-b2b-connector/main/default/objects/SBQQ_Subscription__c/fields/B2B_Installment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>B2B_Installment_Frequency__c</fullName>
    <label>B2B Installment Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>