sm/sm-b2b-connector/main/default/objects/SBQQ_Subscription__c/fields/B2B_Installment_Next_Date__c.field-meta.xml
<CustomField>
    <fullName>B2B_Installment_Next_Date__c</fullName>
    <label>B2B Installment Next Date</label>
    <type>DateTime</type>
</CustomField>