sm/sm-b2b-connector/main/default/objects/SBQQ_Subscription__c/fields/B2B_Order_Count_Remaining__c.field-meta.xml
<CustomField>
    <fullName>B2B_Order_Count_Remaining__c</fullName>
    <label>B2B Order Count Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>